added banner section

--- a/index.html
+++ b/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.5.1/dist/full.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Summer Sale</title>
 </head>
+
 <body>
-    
+    <!-- banner section -->
+    <header class=" bg-[#F9F6E2] w-screen">
+        <section>
+            <div class="hero">
+                <div class="hero-content flex-col lg:flex-row-reverse max-w-screen-lg mx-auto md:gap-8">
+                  <img src="/images/Summer1.png" class="md:max-w-sm rounded-lg" />
+                  <div class="text-center space-y-2 md:space-y-8">
+                    <p class="text-sm md:text-2xl font-medium">---SALE FEVER---</p>
+                    <h1 class="text-xl md:text-5xl font-bold">Purchase TK 200 or above & get <span class="text-[#E527B2]">20% off</span></h1>
+                    <p class="py-6 font-medium md:text-lg">Use Promo Code <button class="ml-2 py-2 px-4 rounded-lg bg-[#E527B2] text-white">SELL200</button></p>
+                  </div>
+                </div>
+              </div>
+        </section>
+    </header>
+    <!-- body section -->
+    <main>
+        <section>
+            <!-- card section -->
+            <div>
+
+            </div>
+            <!-- cart section -->
+            <div>
+
+            </div>
+        </section>
+    </main>
 </body>
+
 </html>
