--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
     <!-- body section -->
     <main class="bg-[#F8F8F8]">
         <section class="max-w-screen-lg mx-auto flex flex-col md:flex-row gap-4 py-6 md:py-24 ">
-            <!-- card section -->
+            <!-- card section ------------------------------>
             <div class="flex-1">
                 <!-- card row 1 -->
                 <div>
                     <h1 class="text-xl md:text-3xl font-semibold">Kitchenware</h1>
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-5">
                         <!-- card 1 -->
-                        <div class=" bg-base-100 shadow-xl p-4">
+                        <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-xl p-4">
                             <figure class="px-10 pt-10 bg-[#11111126] h-2/3">
                                 <img src="/images/prod1.png" alt="Shoes"
                                     class="rounded-xl" />
@@ -58,11 +58,11 @@
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                 </div>
                                 <h2 class="font-semibold">Spoons</h2>
-                                <p class="text-[#11111180]">39.00 TK</p>
+                                <p class="text-[#11111180]"><span>39.00</span> TK</p>
                             </div>
                         </div>
                         <!-- card 2 -->
-                        <div class=" bg-base-100 shadow-xl p-4">
+                        <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-xl p-4">
                             <figure class="px-10 pt-10 bg-[#11111126] h-2/3">
                                 <img src="/images/prod2.png" alt="Shoes"
                                     class="rounded-xl" />
@@ -77,11 +77,11 @@
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                 </div>
                                 <h2 class="font-semibold">Cutting Board</h2>
-                                <p class="text-[#11111180]">25.00 TK</p>
+                                <p class="text-[#11111180]"><span>25.00</span> TK</p>
                             </div>
                         </div>
                         <!-- card 3 -->
-                        <div class=" bg-base-100 shadow-xl p-4">
+                        <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-xl p-4">
                             <figure class="px-10 pt-10 bg-[#11111126] h-2/3">
                                 <img src="/images/prod3.png" alt="Shoes"
                                     class="rounded-xl" />
@@ -96,7 +96,7 @@
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                 </div>
                                 <h2 class="font-semibold">Rice Cooker</h2>
-                                <p class="text-[#11111180]">49.00 TK</p>
+                                <p class="text-[#11111180]"><span>49.00</span> TK</p>
                             </div>
                         </div>
                     </div>
@@ -106,7 +106,7 @@
                     <h1 class="text-xl md:text-3xl font-semibold">Sportswear</h1>
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-5">
                         <!-- card 1 -->
-                        <div class=" bg-base-100 shadow-xl p-4">
+                        <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-xl p-4">
                             <figure class="px-10 pt-10 bg-[#11111126] h-2/3">
                                 <img src="/images/prod4.png" alt="Shoes"
                                     class="rounded-xl" />
@@ -121,11 +121,11 @@
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                 </div>
                                 <h2 class="font-semibold">Sports Back Cap</h2>
-                                <p class="text-[#11111180]">49.00 TK</p>
+                                <p class="text-[#11111180]"><span>49.00</span> TK</p>
                             </div>
                         </div>
                         <!-- card 2 -->
-                        <div class=" bg-base-100 shadow-xl p-4">
+                        <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-xl p-4">
                             <figure class="px-10 pt-10 bg-[#11111126] h-2/3">
                                 <img src="/images/prod5.png" alt="Shoes"
                                     class="rounded-xl" />
@@ -140,11 +140,11 @@
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                 </div>
                                 <h2 class="font-semibold">Full Jersey Set</h2>
-                                <p class="text-[#11111180]">69.00 TK</p>
+                                <p class="text-[#11111180]"><span>69.00</span> TK</p>
                             </div>
                         </div>
                         <!-- card 3 -->
-                        <div class=" bg-base-100 shadow-xl p-4">
+                        <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-xl p-4">
                             <figure class="px-10 pt-10 bg-[#11111126] h-2/3">
                                 <img src="/images/prod6.png" alt="Shoes"
                                     class="rounded-xl" />
@@ -159,7 +159,7 @@
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                 </div>
                                 <h2 class="font-semibold">Sports cates</h2>
-                                <p class="text-[#11111180]">159.00 TK</p>
+                                <p class="text-[#11111180]"><span>159.00</span> TK</p>
                             </div>
                         </div>
                     </div>
@@ -169,7 +169,7 @@
                     <h1 class="text-xl md:text-3xl font-semibold">Furniture</h1>
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-5">
                         <!-- card 1 -->
-                        <div class=" bg-base-100 shadow-xl p-4">
+                        <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-xl p-4">
                             <figure class="px-10 pt-10 bg-[#11111126] h-2/3">
                                 <img src="/images/prod7.png" alt="Shoes"
                                     class="rounded-xl" />
@@ -184,11 +184,11 @@
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                 </div>
                                 <h2 class="font-semibold">Single Relax Chair</h2>
-                                <p class="text-[#11111180]">185.00 TK</p>
+                                <p class="text-[#11111180]"><span>185.00</span> TK</p>
                             </div>
                         </div>
                         <!-- card 2 -->
-                        <div class=" bg-base-100 shadow-xl p-4">
+                        <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-xl p-4">
                             <figure class="px-10 pt-10 bg-[#11111126] h-2/3">
                                 <img src="/images/prod8.png" alt="Shoes"
                                     class="rounded-xl" />
@@ -203,11 +203,11 @@
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                 </div>
                                 <h2 class="font-semibold">Children play</h2>
-                                <p class="text-[#11111180]">299.00 TK</p>
+                                <p class="text-[#11111180]"><span>299.00</span> TK</p>
                             </div>
                         </div>
                         <!-- card 3 -->
-                        <div class=" bg-base-100 shadow-xl p-4">
+                        <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-xl p-4">
                             <figure class="px-10 pt-10 bg-[#11111126] h-2/3">
                                 <img src="/images/prod9.png" alt="Shoes"
                                     class="rounded-xl" />
@@ -222,13 +222,13 @@
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                 </div>
                                 <h2 class="font-semibold">Flexible Sofa</h2>
-                                <p class="text-[#11111180]">339.00 TK</p>
+                                <p class="text-[#11111180]"><span>339.00</span> TK</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <!-- cart section -->
+            <!-- cart section ---------------------->
             <div class="flex flex-col gap-4 items-center">
                 <div class="bg-white p-2 md:p-6 space-y-4 rounded-lg w-[16rem]">
                     <h1 class="font-medium text-lg">Have coupon?</h1>
@@ -236,24 +236,27 @@
                         <input type="text" class="border border-[#11111126] h-[2.5rem] w-[8rem] px-2 rounded-l-lg"
                             placeholder="Coupon code">
                         <button
-                            class="absolute bg-[#E527B2] h-[2.5rem] px-4 font-semibold text-sm text-white rounded-r-lg">Apply</button>
+                            class="bg-[#d898c7] text-white btn-disabled absolute h-[2.5rem] px-4 font-semibold text-sm rounded-r-lg" type="button">Apply</button>
                     </div>
                 </div>
                 <div class="bg-white rounded-lg md:p-6 w-[16rem] relative">
-                    <div class="space-y-2 border-b border-[#11111126] my-4">
+                    <div id="shopping-list" class="space-y-2 border-b border-[#11111126] pb-4">
 
                     </div>
                     <div class="space-y-2 border-b border-[#11111126] mt-4 mb-6">
-                        <h1 class="font-medium">Total Pride: <span></span></h1>
-                        <h1 class="font-medium">Discount: <span></span></h1>
-                        <h1 class="font-medium">Total: <span></span></h1>
+                        <h1 class="font-medium">Total Price: <span  id="total-price" class="text-[#11111180]"></span></h1>
+                        <h1 class="font-medium">Discount: <span id="discount" class="text-[#11111180]"></span></h1>
+                        <h1 class="font-medium">Total: <span  id="total" class="text-[#11111180]"></span></h1>
                     </div>
-                    <button class="absolute left-9 bg-[#E527B2] px-10 py-3 rounded-lg text-white font-semibold">Make
+                    <button class="btn-disabled absolute left-9 bg-[#d898c7] px-10 py-3 rounded-lg text-white font-semibold">Make
                         Purchase</button>
                 </div>
             </div>
         </section>
     </main>
+
+    <!-- scripts -->
+    <script src="./scripts/select-card.js"></script>
 </body>
 
 </html>
