--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     <div class="relative">
                         <input type="text" class="border border-[#11111126] h-[2.5rem] w-[8rem] px-2 rounded-l-lg"
                             placeholder="Coupon code">
-                        <button
+                        <button id="apply"
                             class="bg-[#d898c7] text-white btn-disabled absolute h-[2.5rem] px-4 font-semibold text-sm rounded-r-lg" type="button">Apply</button>
                     </div>
                 </div>
@@ -248,7 +248,7 @@
                         <h1 class="font-medium">Discount: <span id="discount" class="text-[#11111180]"></span></h1>
                         <h1 class="font-medium">Total: <span  id="total" class="text-[#11111180]"></span></h1>
                     </div>
-                    <button class="btn-disabled absolute left-9 bg-[#d898c7] px-10 py-3 rounded-lg text-white font-semibold">Make
+                    <button id="make-purchase" class="btn-disabled absolute left-9 bg-[#d898c7] px-10 py-3 rounded-lg text-white font-semibold">Make
                         Purchase</button>
                 </div>
             </div>
