--- a/index.html
+++ b/index.html
@@ -233,9 +233,9 @@
                 <div class="bg-white p-2 md:p-6 space-y-4 rounded-lg w-[16rem]">
                     <h1 class="font-medium text-lg">Have coupon?</h1>
                     <div class="relative">
-                        <input type="text" class="border border-[#11111126] h-[2.5rem] w-[8rem] px-2 rounded-l-lg"
+                        <input id="coupon-field" type="text" class="border border-[#11111126] h-[2.5rem] w-[8rem] px-2 rounded-l-lg"
                             placeholder="Coupon code">
-                        <button id="apply"
+                        <button id="apply" onclick="applyClicked(this)"
                             class="bg-[#d898c7] text-white btn-disabled absolute h-[2.5rem] px-4 font-semibold text-sm rounded-r-lg" type="button">Apply</button>
                     </div>
                 </div>
@@ -256,6 +256,7 @@
     </main>
 
     <!-- scripts -->
+    <script src="./scripts/apply-btn-clicked.js"></script>
     <script src="./scripts/select-card.js"></script>
 </body>
 
