added modal and go home script

--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
                         <!-- card 1 -->
                         <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-xl p-4">
                             <figure class="px-10 pt-10 bg-[#11111126] h-2/3">
-                                <img src="/images/prod1.png" alt="Shoes"
-                                    class="rounded-xl" />
+                                <img src="/images/prod1.png" alt="Shoes" class="rounded-xl" />
                             </figure>
                             <div class="card-body items-center text-center">
                                 <!-- rating -->
                                 <div class="rating">
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                        checked />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
@@ -64,14 +64,14 @@
                         <!-- card 2 -->
                         <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-xl p-4">
                             <figure class="px-10 pt-10 bg-[#11111126] h-2/3">
-                                <img src="/images/prod2.png" alt="Shoes"
-                                    class="rounded-xl" />
+                                <img src="/images/prod2.png" alt="Shoes" class="rounded-xl" />
                             </figure>
                             <div class="card-body items-center text-center">
                                 <!-- rating -->
                                 <div class="rating">
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                        checked />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
@@ -83,14 +83,14 @@
                         <!-- card 3 -->
                         <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-xl p-4">
                             <figure class="px-10 pt-10 bg-[#11111126] h-2/3">
-                                <img src="/images/prod3.png" alt="Shoes"
-                                    class="rounded-xl" />
+                                <img src="/images/prod3.png" alt="Shoes" class="rounded-xl" />
                             </figure>
                             <div class="card-body items-center text-center">
                                 <!-- rating -->
                                 <div class="rating">
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                        checked />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
@@ -108,14 +108,14 @@
                         <!-- card 1 -->
                         <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-xl p-4">
                             <figure class="px-10 pt-10 bg-[#11111126] h-2/3">
-                                <img src="/images/prod4.png" alt="Shoes"
-                                    class="rounded-xl" />
+                                <img src="/images/prod4.png" alt="Shoes" class="rounded-xl" />
                             </figure>
                             <div class="card-body items-center text-center">
                                 <!-- rating -->
                                 <div class="rating">
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                        checked />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
@@ -127,14 +127,14 @@
                         <!-- card 2 -->
                         <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-xl p-4">
                             <figure class="px-10 pt-10 bg-[#11111126] h-2/3">
-                                <img src="/images/prod5.png" alt="Shoes"
-                                    class="rounded-xl" />
+                                <img src="/images/prod5.png" alt="Shoes" class="rounded-xl" />
                             </figure>
                             <div class="card-body items-center text-center">
                                 <!-- rating -->
                                 <div class="rating">
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                        checked />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
@@ -146,14 +146,14 @@
                         <!-- card 3 -->
                         <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-xl p-4">
                             <figure class="px-10 pt-10 bg-[#11111126] h-2/3">
-                                <img src="/images/prod6.png" alt="Shoes"
-                                    class="rounded-xl" />
+                                <img src="/images/prod6.png" alt="Shoes" class="rounded-xl" />
                             </figure>
                             <div class="card-body items-center text-center">
                                 <!-- rating -->
                                 <div class="rating">
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                        checked />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
@@ -171,14 +171,14 @@
                         <!-- card 1 -->
                         <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-xl p-4">
                             <figure class="px-10 pt-10 bg-[#11111126] h-2/3">
-                                <img src="/images/prod7.png" alt="Shoes"
-                                    class="rounded-xl" />
+                                <img src="/images/prod7.png" alt="Shoes" class="rounded-xl" />
                             </figure>
                             <div class="card-body items-center text-center">
                                 <!-- rating -->
                                 <div class="rating">
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                        checked />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
@@ -190,14 +190,14 @@
                         <!-- card 2 -->
                         <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-xl p-4">
                             <figure class="px-10 pt-10 bg-[#11111126] h-2/3">
-                                <img src="/images/prod8.png" alt="Shoes"
-                                    class="rounded-xl" />
+                                <img src="/images/prod8.png" alt="Shoes" class="rounded-xl" />
                             </figure>
                             <div class="card-body items-center text-center">
                                 <!-- rating -->
                                 <div class="rating">
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                        checked />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
@@ -209,14 +209,14 @@
                         <!-- card 3 -->
                         <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-xl p-4">
                             <figure class="px-10 pt-10 bg-[#11111126] h-2/3">
-                                <img src="/images/prod9.png" alt="Shoes"
-                                    class="rounded-xl" />
+                                <img src="/images/prod9.png" alt="Shoes" class="rounded-xl" />
                             </figure>
                             <div class="card-body items-center text-center">
                                 <!-- rating -->
                                 <div class="rating">
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                        checked />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
@@ -233,10 +233,12 @@
                 <div class="bg-white p-2 md:p-6 space-y-4 rounded-lg w-[16rem]">
                     <h1 class="font-medium text-lg">Have coupon?</h1>
                     <div class="relative">
-                        <input id="coupon-field" type="text" class="border border-[#11111126] h-[2.5rem] w-[8rem] px-2 rounded-l-lg"
+                        <input id="coupon-field" type="text"
+                            class="border border-[#11111126] h-[2.5rem] w-[8rem] px-2 rounded-l-lg"
                             placeholder="Coupon code">
                         <button id="apply" onclick="applyClicked(this)"
-                            class="bg-[#d898c7] text-white btn-disabled absolute h-[2.5rem] px-4 font-semibold text-sm rounded-r-lg" type="button">Apply</button>
+                            class="bg-[#d898c7] text-white btn-disabled absolute h-[2.5rem] px-4 font-semibold text-sm rounded-r-lg"
+                            type="button">Apply</button>
                     </div>
                 </div>
                 <div class="bg-white rounded-lg md:p-6 w-[16rem] relative">
@@ -244,19 +246,35 @@
 
                     </div>
                     <div class="space-y-2 border-b border-[#11111126] mt-4 mb-6">
-                        <h1 class="font-medium">Total Price: <span  id="total-price" class="text-[#11111180]"></span></h1>
+                        <h1 class="font-medium">Total Price: <span id="total-price" class="text-[#11111180]"></span>
+                        </h1>
                         <h1 class="font-medium">Discount: <span id="discount" class="text-[#11111180]"></span></h1>
-                        <h1 class="font-medium">Total: <span  id="total" class="text-[#11111180]"></span></h1>
+                        <h1 class="font-medium">Total: <span id="total" class="text-[#11111180]"></span></h1>
                     </div>
-                    <button id="make-purchase" class="btn-disabled absolute left-9 bg-[#d898c7] px-10 py-3 rounded-lg text-white font-semibold">Make
+                    <button id="make-purchase" onclick="makePurchase(this)"
+                        class="btn-disabled absolute left-9 bg-[#d898c7] px-10 py-3 rounded-lg text-white font-semibold">Make
                         Purchase</button>
                 </div>
             </div>
         </section>
+        <!-- modal -->
+        <dialog id="my_modal_1" class="modal">
+            <form method="dialog" class="modal-box flex flex-col items-center">
+                <figure>
+                    <img src="./images/congo.png" alt="">
+                </figure>
+                <h3 class="font-bold text-3xl mt-4">Congratulations</h3>
+                <p class="py-4">You have purchased the products</p>
+                <button onclick="goHome(this)" class="py-4 rounded-lg text-sm font-semibold bg-[#E527B2] text-white px-8">Go Home</button>
+                
+            </form>
+        </dialog>
     </main>
 
     <!-- scripts -->
+    <script src="./scripts/go-home-btn-click.js"></script>
     <script src="./scripts/apply-btn-clicked.js"></script>
+    <script src="./scripts/make-purchase-btn-click.js"></script>
     <script src="./scripts/select-card.js"></script>
 </body>
 
