--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                         <p class="text-sm md:text-2xl font-medium">---SALE FEVER---</p>
                         <h1 class="text-xl md:text-5xl font-bold">Purchase TK 200 or above & get <span
                                 class="text-[#E527B2]">20% off</span></h1>
-                        <p class="py-6 font-medium md:text-lg">Use Promo Code <button
-                                class="ml-2 py-2 px-4 rounded-lg bg-[#E527B2] text-white">SELL200</button></p>
+                        <p class="py-6 font-medium md:text-lg">Use Promo Code <span
+                                class="ml-2 py-2 px-4 rounded-lg bg-[#E527B2] text-white">SELL200</span></p>
                     </div>
                 </div>
             </div>
