--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
 <body>
     <!-- banner section -->
-    <header class=" bg-[#F9F6E2]">
+    <header class=" bg-[#F9F6E2] lg:pb-10">
         <section>
             <div class="hero">
                 <div class="hero-content flex-col lg:flex-row-reverse max-w-screen-lg mx-auto md:gap-8">
                     <img src="/images/Summer1.png" class="md:max-w-sm rounded-lg" />
                     <div class="text-center space-y-2 md:space-y-8">
                         <p class="text-sm md:text-2xl font-medium">---SALE FEVER---</p>
-                        <h1 class="text-xl md:text-5xl font-bold">Purchase TK 200 or above & get <span
+                        <h1 class="text-xl md:text-3xl lg:text-5xl font-bold">Purchase TK 200 or above & get <span
                                 class="text-[#E527B2]">20% off</span></h1>
                         <p class="py-6 font-medium md:text-lg">Use Promo Code <span
                                 class="ml-2 py-2 px-4 rounded-lg bg-[#E527B2] text-white">SELL200</span></p>
@@ -35,15 +35,15 @@
     </header>
     <!-- body section -->
     <main class="bg-[#F8F8F8]">
-        <section class="max-w-screen-lg mx-auto flex flex-col md:flex-row gap-4 py-6 md:py-24 ">
+        <section class="max-w-screen-lg mx-auto flex flex-col lg:flex-row gap-4 py-6 md:py-24 ">
             <!-- card section ------------------------------>
             <div class="flex-1">
                 <!-- card row 1 -->
                 <div>
-                    <h1 class="text-xl md:text-3xl font-semibold">Kitchenware</h1>
+                    <h1 class="text-xl md:text-3xl font-semibold ml-2">Kitchenware</h1>
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-5">
                         <!-- card 1 -->
-                        <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-xl p-4">
+                        <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-lg p-4">
                             <figure class="px-10 pt-10 bg-[#11111126] h-2/3">
                                 <img src="/images/prod1.png" alt="Shoes" class="rounded-xl" />
                             </figure>
@@ -62,7 +62,7 @@
                             </div>
                         </div>
                         <!-- card 2 -->
-                        <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-xl p-4">
+                        <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-lg p-4">
                             <figure class="px-10 pt-10 bg-[#11111126] h-2/3">
                                 <img src="/images/prod2.png" alt="Shoes" class="rounded-xl" />
                             </figure>
@@ -81,7 +81,7 @@
                             </div>
                         </div>
                         <!-- card 3 -->
-                        <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-xl p-4">
+                        <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-lg p-4">
                             <figure class="px-10 pt-10 bg-[#11111126] h-2/3">
                                 <img src="/images/prod3.png" alt="Shoes" class="rounded-xl" />
                             </figure>
@@ -95,18 +95,18 @@
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                 </div>
-                                <h2 class="font-semibold">Rice Cooker</h2>
+                                <h2 class="font-semibold">Home Cooker</h2>
                                 <p class="text-[#11111180]"><span>49.00</span> TK</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <!-- card row 2 -->
-                <div class="mt-8">
-                    <h1 class="text-xl md:text-3xl font-semibold">Sportswear</h1>
+                <div class="mt-8 lg:mt-12">
+                    <h1 class="text-xl md:text-3xl font-semibold ml-2">Sportswear</h1>
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-5">
                         <!-- card 1 -->
-                        <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-xl p-4">
+                        <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-lg p-4">
                             <figure class="px-10 pt-10 bg-[#11111126] h-2/3">
                                 <img src="/images/prod4.png" alt="Shoes" class="rounded-xl" />
                             </figure>
@@ -125,7 +125,7 @@
                             </div>
                         </div>
                         <!-- card 2 -->
-                        <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-xl p-4">
+                        <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-lg p-4">
                             <figure class="px-10 pt-10 bg-[#11111126] h-2/3">
                                 <img src="/images/prod5.png" alt="Shoes" class="rounded-xl" />
                             </figure>
@@ -144,7 +144,7 @@
                             </div>
                         </div>
                         <!-- card 3 -->
-                        <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-xl p-4">
+                        <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-lg p-4">
                             <figure class="px-10 pt-10 bg-[#11111126] h-2/3">
                                 <img src="/images/prod6.png" alt="Shoes" class="rounded-xl" />
                             </figure>
@@ -165,11 +165,11 @@
                     </div>
                 </div>
                 <!-- card row 3 -->
-                <div class="mt-8">
-                    <h1 class="text-xl md:text-3xl font-semibold">Furniture</h1>
+                <div class="mt-8 lg:mt-12">
+                    <h1 class="text-xl md:text-3xl font-semibold ml-2">Furniture</h1>
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-5">
                         <!-- card 1 -->
-                        <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-xl p-4">
+                        <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-lg p-4">
                             <figure class="px-10 pt-10 bg-[#11111126] h-2/3">
                                 <img src="/images/prod7.png" alt="Shoes" class="rounded-xl" />
                             </figure>
@@ -188,7 +188,7 @@
                             </div>
                         </div>
                         <!-- card 2 -->
-                        <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-xl p-4">
+                        <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-lg p-4">
                             <figure class="px-10 pt-10 bg-[#11111126] h-2/3">
                                 <img src="/images/prod8.png" alt="Shoes" class="rounded-xl" />
                             </figure>
@@ -207,7 +207,7 @@
                             </div>
                         </div>
                         <!-- card 3 -->
-                        <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-xl p-4">
+                        <div onclick="selectCard(this)" class="cursor-pointer bg-base-100 shadow-lg p-4">
                             <figure class="px-10 pt-10 bg-[#11111126] h-2/3">
                                 <img src="/images/prod9.png" alt="Shoes" class="rounded-xl" />
                             </figure>
@@ -229,7 +229,7 @@
                 </div>
             </div>
             <!-- cart section ---------------------->
-            <div class="flex flex-col gap-4 items-center">
+            <div class="flex flex-col gap-4 items-center mb-10 lg:mt-14">
                 <div class="bg-white p-2 md:p-6 space-y-4 rounded-lg w-[16rem]">
                     <h1 class="font-medium text-lg">Have coupon?</h1>
                     <div class="relative">
@@ -263,9 +263,9 @@
                 <figure>
                     <img src="./images/congo.png" alt="">
                 </figure>
-                <h3 class="font-bold text-3xl mt-4">Congratulations</h3>
-                <p class="py-4">You have purchased the products</p>
-                <button onclick="goHome(this)" class="py-4 rounded-lg text-sm font-semibold bg-[#E527B2] text-white px-8">Go Home</button>
+                <h3 class="font-bold text-lg md:text-xl lg:text-3xl lg:mt-4">Congratulations</h3>
+                <p class="my-1 lg:my-4">You have purchased the products</p>
+                <button onclick="goHome(this)" class="py-2 lg:py-4 rounded-lg text-sm font-semibold bg-[#E527B2] text-white px-8">Go Home</button>
                 
             </form>
         </dialog>
