--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                             type="button">Apply</button>
                     </div>
                 </div>
-                <div class="bg-white rounded-lg md:p-6 w-[16rem] relative">
+                <div class="bg-white p-2 rounded-lg md:p-6 w-[16rem] relative">
                     <div id="shopping-list" class="space-y-2 border-b border-[#11111126] pb-4">
 
                     </div>
